--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
       background-color: #2c2c2c; /* نفس لون الخلفية */
       padding: 10px;
       text-align: center;
+      border: 5px solid white;
   }
 
   nav ul.show {
